# torchfits

./: .gitignore  AGENTS.md  JULES.md  LICENSE  README.md  constraints-wheel.txt  pixi.toml  plan.md  pyproject.toml  run_manual_test.py  zensical.toml
.Jules/: palette.md
.cursor/: hooks.json  jules-ledger.md  post-1.0-backlog.md
.cursor/harness/: .gitignore  config.json  playbook.md
.cursor/hooks/: harness-session-start.sh  harness-stop.sh
.cursor/skills/release-api-freeze-review/: SKILL.md
.github/workflows/: bench-gpu-exhaustive.yml  bench-report.yml  build_wheels.yml  ci.yml  docs.yml
.jules/: sentinel.md
archive/pre-1.0-reviews/: README.md  _security_1.0b1.md  deep_review_1.0-r2.md  deep_review_1.0-r3.md  deep_review_1.0.md  release-1.0b1-code.md  release-api-freeze-0.9.0.md  release-api-freeze-0.9.1.md  release-api-freeze-0.9.2.md  release-api-freeze-1.0-prep.md  release-api-freeze-1.0.0rc1.md  release-api-freeze-1.0b1.md  thermo-nuclear-cli-docs-polish.md
benchmarks/: bench_all.py  bench_arrow_tables.py  bench_contract.py  bench_cpp_backend.py  bench_fits_io.py  bench_fits_write.py  bench_fitstable_io.py  bench_gpu_transports.py  bench_megacam_cutouts.py  bench_ml_loader.py  bench_poly_continuum.py  bench_table.py  bench_timing.py  run_cfitsio_direct_bench.py  suites.py
benchmarks/cfitsio_direct/: CMakeLists.txt  bench_cfitsio_direct.c
docs/: api-core-io.md  api-data.md  api-tables.md  api-transforms.md  api.md  architecture.md  benchmarks.md  changelog.md  cli-recipes.md  cli.md  compatibility.md  contributing.md  examples-ml.md  examples-transforms.md  examples.md  index.md  install.md  jules-ledger.md  migration_astropy.md  migration_datasets.md  migration_fitsio.md  parity.md  python-workflows.md  quickstart.md  release.md  roadmap.md
docs/reviews/: _inventory_1.0b1.txt  release-1.0b1-api-adoption.md  release-1.0b1-docs.md  release-1.0b1-realdata-cli.md  release-api-freeze-0.7.0.md  release-api-freeze-0.8.0.md  release-api-freeze-0.9.0.md  release-api-freeze-1.0-prep.md  release-api-freeze-1.0.0rc1.md  release-api-freeze-1.0b1.md  thermo-nuclear-0.9.2.md  transforms-1.0.md
docs/stylesheets/: extra.css
examples/: _plotting.py  _sample_data.py  desi_shaped_spectrum.py  example_custom_transform.py  example_cutout_wcs_write.py  example_data_catalogs.py  example_hyperspectral.py  example_image.py  example_image_cube.py  example_image_cutouts.py  example_image_dataset.py  example_image_mef.py  example_lupton_rgb_sdss.py  example_m13_stack.py  example_make_loader_vs_dataloader.py  example_manga_logcube.py  example_mef_header.py  example_megacam_mef_cutouts.py  example_megapipe_cutout_collage.py  example_ml_galaxyzoo_legacy.py  example_polars.py  example_quantize_int16.py  example_table.py  example_table_interop.py  example_table_recipes.py  example_time_series.py  example_transforms.py  gallery_images.py  gallery_spectra.py  gallery_tables_lc.py  test_examples.py
examples/cli/: imstat_imarith.sh  make_rgb_demo.py
overrides/: home.html  main.html
scripts/: bench_cfitsio_direct.sh  bench_deficit_focus.sh  bench_exhaustive_local.sh  bench_release_scorecard.sh  bench_suite.sh  build_docs_pages.sh  canfar_gpu_bench_incontainer.sh  canfar_gpu_bench_remote.sh  check_docs_links.py  ci_local.sh  clean_install_smoke.sh  fetch_canfar_bench_vos.sh  fetch_cfht_megacam_sample.sh  fetch_cfht_megapipe_sample.sh  fetch_example_samples.sh  gpu-bootstrap.sh  import_canfar_bench_artifacts.py  launch_canfar_gpu_bench.sh  patch_bench_docs.py  patch_canfar_exhaustive_docs.sh  publish_canfar_bench_vos.sh  render_bench_deficits.py  render_bench_highlights.py  render_bench_iopath_table.py  render_bench_ml.py  render_bench_quick.py  render_full_benchmarks_table.py  run_canfar_gpu_exhaustive.sh  run_exhaustive_bench_and_patch_docs.sh  run_exhaustive_bench_ci.sh  selfcheck_canfar_launcher.sh  sync_docs_examples.sh
src/torchfits/: __init__.py  _fastio.py  _string_decode.py  _tensor_buffer.py  _unsigned.py  _where.py  cache.py  core.py  cpp.py  datasets.py  fits_schema.py  hdu.py  header_parser.py  http_util.py  interop.py  io.py  logging.py  table.py  transforms.py  vos_uri.py  where.py
src/torchfits/_hdu/: card.py  dataview.py  hdu_list.py  header.py  table_hdu.py  table_hdu_ref.py  tensor_hdu.py
src/torchfits/_io_engine/: _read_pipeline.py  _read_pipeline_fallback.py  batch.py  caches.py  checksum_api.py  hdu_api.py  http_subset.py  image.py  image_meta.py  options.py  paths.py  quantize.py  read_dispatch.py  subset.py  table_api.py  table_reader_api.py  table_streaming.py  write_api.py
src/torchfits/_table/: __init__.py  arrow_convert.py  cache.py  engine.py  interop.py  mutation.py  read.py  utils.py  write.py
src/torchfits/_table_engine/: __init__.py  backend_policy.py  read_policy.py
src/torchfits/cli/: __init__.py  __main__.py  cmds_arith.py  cmds_compress.py  cmds_convert.py  cmds_copy.py  cmds_cutout.py  cmds_diff.py  cmds_header.py  cmds_info.py  cmds_probe.py  cmds_setkey.py  cmds_stats.py  cmds_table.py  cmds_transform.py  cmds_verify.py  common.py  main.py  rgb.py
src/torchfits/cpp_src/: CMakeLists.txt  bindings.cpp  (+18 more)
tests/: test_api.py  test_arrow_table_api.py  test_astropy_upstream_smoke.py  test_bench_ranking_mmap.py  test_bench_suites.py  test_bz2.py  test_cache.py  test_cache_config.py  test_checksum.py  test_cli.py  test_compression.py  test_concurrent_same_file_read.py  test_cutout_performance_api.py  test_data.py  test_data_datasets.py  test_deep_review_p0.py  test_deep_review_wave2.py  test_deep_review_wave4.py  test_docs_integrity.py  test_fitsio_upstream_smoke.py  test_hdu.py  test_hdu_file_ops.py  test_hdu_str.py  test_header_versioning.py  test_http_probe_fixture.py  test_integration.py  test_interop.py  test_io.py  test_open_table_reader.py  test_package_isolation.py  test_public_boundary.py  test_public_where.py  test_quantize_int16.py  test_read_header.py  test_read_policy.py  test_release_smoke.py  test_remote_http_range.py  test_scale_on_device.py  test_security.py  test_security_fix.py  (+14 more)
tests/cpp/: test_bracket_detection.cpp
(+44 files in other folders)
