[build-system]
# Compatible with both pip and pixi-build cmake backend
# When using pixi-build, these are automatically provided but we keep them for pip compatibility
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.10.2",
    "torch>=2.10",
    "numpy>=1.20.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "torchfits"
version = "1.0.0rc2"
description = "FITS I/O for PyTorch with native tensor reads, datasets, and transforms"
authors = [{ name = "Seb Fabbro", email = "sebfabbro@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["fits", "astronomy", "pytorch", "tensor", "cfitsio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"

# Core runtime dependencies for the library.
# These are automatically managed by pixi for conda packages
# but needed here for PyPI compatibility
dependencies = [
    "torch>=2.10",
    "numpy>=1.20.0",  # Core numerical operations
    "pyarrow>=5.0",   # Table I/O (Arrow interchange)
]

[project.scripts]
torchfits = "torchfits.cli.main:main"

[project.urls]
Homepage = "https://github.com/astroai/torchfits"
Documentation = "https://astroai.github.io/torchfits/"
Repository = "https://github.com/astroai/torchfits"

# Defines optional dependencies for different use cases.
# For pixi environments, these are managed separately via features
[project.optional-dependencies]

dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "astropy>=5.0",
    "fitsio>=1.1",
    "pandas>=1.0",
    "matplotlib>=3.0",
    "tomli>=2.0; python_version < '3.11'",
]
bench = [
    "astropy>=5.0",
    "fitsio>=1.1",
    "pandas>=1.0",
    "matplotlib>=3.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
examples = [
    "matplotlib>=3.0",
]

# Configuration for the scikit-build-core build system.
[tool.scikit-build]
# Specifies the directory containing the top-level CMakeLists.txt file.
cmake.source-dir = "src/torchfits/cpp_src"
cmake.build-type = "Release"
cmake.args = [
    "-DTORCHFITS_USE_VENDORED_CFITSIO=ON",
    "-DTORCHFITS_NIOBUF=80",
    "-DTORCHFITS_MINDIRECT=8640",
    "-DUSE_CUDA=OFF",
    # The C++ extension has no .cu kernels; libtorch_cuda.so from the cu128
    # wheel is linked for tensor API surface but never invoked for compile.
    # torch's Caffe2 public/cuda.cmake probes unconditionally when libtorch
    # was built with CUDA. Skip stdlib find_package(CUDA) and point the toolkit
    # at the conda prefix (cuda-cudart-dev + cuda-driver-dev provide headers
    # and libcudart.so under $CONDA_PREFIX/{include,lib}). scikit-build-core
    # expands ${CONDA_PREFIX} before cmake sees the arg; scikit-build-core does
    # NOT compile CUDA (the extension has no .cu kernels), so the path just
    # needs to satisfy Caffe2's layout expectations, not run nvcc.
    "-DCUDA_TOOLKIT_ROOT_DIR=${CONDA_PREFIX}",
    "-DCUDAToolkit_ROOT=${CONDA_PREFIX}",
    "-DCMAKE_C_FLAGS=-O3",
    "-DCMAKE_CXX_FLAGS=-O3",
]

# Note: USE_CUDA=OFF is intentional. The C++ extension in src/torchfits/cpp_src
# has no CUDA kernels (the hardware.cpp core is CPU-only); we link against
# libtorch from a CUDA-enabled PyTorch wheel just for the tensor API surface.
# If/when CUDA kernels are added under src/torchfits/cpp_src, revisit this.

# Configures the install directory for the compiled extension.
# This ensures the compiled `cpp.so` or `cpp.pyd` file is placed inside the `torchfits` package.
install.strip = false
wheel.packages = ["src/torchfits"]
wheel.exclude = ["torchfits/cpp_src/**"]

# This setting enables CMake's incremental build feature. When you re-run the build,
# CMake and Ninja will automatically detect which C++ files have changed and only
# recompile those, leading to much faster iteration times.
build-dir = "build/{wheel_tag}"




[tool.pytest.ini_options]
markers = [
    "performance: performance-oriented benchmark or stress tests",
    "integration: integration tests across multiple modules",
]

[tool.mypy]
strict = true

[tool.ruff.lint.per-file-ignores]
"benchmarks/**/*.py" = ["E402"]

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "torchfits._C"]
ignore_missing_imports = true
